# wt-info-bk

./: .env.example  LICENSE  README.md  add_method_dao.py  bd_welltec.xlsx  bd_wt.xlsx  config.py  database.py  pyproject.toml  select_methods_dao.py  update_method_dao.py
migrations/: env.py
migrations/versions/: 1021943cc70e_refactor_name_of_table.py  2032e2e77320_added_actual_revision_for_redress_kit.py  2564137c66f6_update_redress_kit_consist_model.py  285663b4845b_add_units_types_update_items.py  2925be905210_added_foreign_keys_for_redress_kit_.py  32ef206bf417_change_version_to_revision_in_retdress_.py  35cdb83385e7_was_added_quantity_to_redresskitconsist.py  3a80bf624aaf_added_models_group_departament_source_.py  46b5565fcd60_unique_name_for_item_added.py  5b3f6c981778_add_relation_category_item.py  5c2a598463a1_added_status_for_assem_model.py  667e36061c2c_add_category_to_item.py  6ac430e62ac3_update_description_nullable_true.py  7724a69798df_update_category_add_user_role.py  8207b6654973_added_status.py  870d876fc86b_added_is_active_for_items.py  8ce1245fcb55_change_type_of_revision_from_redress_.py  9de2bd749614_update_redress_equipment_table.py  9f7283091bce_redress_system_update.py  a76b5ff7f436_added_models_for_service.py  aec662cd0205_upgrade_redress_kit_model.py  b3cc7aacd6d7_change_equipment_table.py  c5f03a1065e6_update_redress_equipment_table_comment_.py  d131d159a6d1_change_service_equipment_user.py  d74467c3d7ae_update.py  d8da2e1efb26_initial_revision.py  db4cb4226df2_change_service_equipment_user.py  (+3 more)
src/: main.py
src/core/: config.py
(+74 files in other folders)
